--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="nav-left">
       <a class="nav-item" style="margin-right: 20px" href="/">
-        <img src="http://bulma.io/images/bulma-logo.png" alt="Bulma logo">
+        <img src="images/tmlogo_blue.png" alt="Bulma logo">
       </a>
       <%# links here %>
     </div>
