can add and delete friends, see them on the account page, see a users friends on their profile page

--- a/views/partials/registerModal.ejs
+++ b/views/partials/registerModal.ejs
@@ -20,6 +20,11 @@
   </div>
   <div class="field">
     <p class="control has-icons-left">
+      <input class="input" type="text" name="image" placeholder="Image url">
+    </p>
+  </div>
+  <div class="field">
+    <p class="control has-icons-left">
       <input class="input" type="password" name="password" placeholder="Password">
     </p>
   </div>
