when you add a friend, you are added to their friends list, also works for deleting

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 * {
   font-family: 'Raleway', sans-serif;
 }
-div, .nav-menu, .is-active, .modal > * {
+div, .nav-menu {
   -webkit-transition: all linear .2s;
   -moz-transition: all linear .2s;
   transition: all linear .2s;
