--- a/views/statics/account.ejs
+++ b/views/statics/account.ejs
@@ -78,7 +78,7 @@
 <% if (user.favArtists.length > 0 || user.favEvents.length > 0 || user.favVenues.length > 0) { %>
   <div class="columns">
     <div class="column is-4">
-      <div class="container favArtists is-multiline">
+      <div class="container favartists is-multiline">
         <h1 class="title">Saved Artists</h1>
         <% if (locals.isLoggedIn && user.favArtists.length > 0) { %>
           <% user.favArtists.forEach(artist => { %>
@@ -91,7 +91,7 @@
     </div>
 
     <div class="column is-4">
-      <div class="container favEvents is-multiline">
+      <div class="container favevents is-multiline">
         <h1 class="title">Saved Events</h1>
         <% if (locals.isLoggedIn && user.favEvents.length > 0) { %>
           <% user.favEvents.forEach(event => { %>
@@ -104,7 +104,7 @@
     </div>
 
     <div class="column is-4">
-      <div class="container favVenues is-multiline">
+      <div class="container favvenues is-multiline">
         <h1 class="title">Saved Venues</h1>
         <% if (locals.isLoggedIn && user.favVenues.length > 0) { %>
           <% user.favVenues.forEach(venue => { %>
@@ -147,85 +147,35 @@
       });
     } // end of account form function
 
-    function favourites() {
-      const artistUrls = $('.artistUrl');
-      const venueUrls = $('.venueUrl');
-      const eventUrls = $('.eventUrl');
-      for (var i = 0; i < artistUrls.length; i++) {
+    function xfavourites(category) {
+      const categoryUrls = $(`.${category}Url`);
+      for (var i = 0; i < categoryUrls.length; i++) {
         $
-        .get($(artistUrls[i]).text())
-        .done(artist => {
+        .get($(categoryUrls[i]).text())
+        .done(item => {
           const favItem = `
-          <h3 class="subtitle">${artist.name}</h3>
-          <p><a href="${artist.url}">View on TicketMaster</a></p>
-          <p><a href="/artist/${artist.id}">View page</a></p>
-          <form action="/favourite/artist/${artist.id}" method="post">
+          <h3 class="subtitle">${item.name}</h3>
+          <p><a href="${item.url}">View on TicketMaster</a></p>
+          <p><a href="/${category}/${item.id}">View page</a></p>
+          <form action="/favourite/${category}/${item.id}" method="post">
             <input type="hidden" name="_method" value="delete">
-            <a id="del${artist.id}" href="javascript:void(0)">Remove</a>
+            <a id="del${item.id}" href="javascript:void(0)">Remove</a>
           </form>
           <br>`;
-          $(favItem).appendTo('.favArtists');
-          return artist; // <form action="/favourite/artist/${artist.id}" method="post">
+          $(favItem).appendTo(`.fav${category+'s'}`);
+          return item;
         })
-        .done(artist => {
-          $(`#del${artist.id}`).on('click', function(e) {
+        .done(item => {
+          $(`#del${item.id}`).on('click', function(e) {
             e.preventDefault();
-            // console.log($(e.target).parent());
             $(e.target).parent().submit();
           });
-        });
-      }
-      for (var i = 0; i < venueUrls.length; i++) {
-        // console.log($(venueUrls[i]).text());
-        $
-        .get($(venueUrls[i]).text())
-        .done(venue => {
-          const favItem = `
-          <h3 class="subtitle">${venue.name}</h3>
-          <p><a href="${venue.url}">View on TicketMaster</a></p>
-          <p><a href="/venue/${venue.id}">View page</a></p>
-          <form action="/favourite/venue/${venue.id}" method="post">
-            <input type="hidden" name="_method" value="delete">
-            <a id="del${venue.id}">Remove</a>
-          </form>
-          <br>`;
-          $(favItem).appendTo('.favVenues');
-          return venue;
         })
-        .done(venue => {
-          $(`#del${venue.id}`).on('click', function(e) {
-            e.preventDefault();
-            console.log($(e.target).parent());
-            $(e.target).parent().submit();
-          });
+        .fail(err => {
+          console.log(err);
         });
       }
-      for (var i = 0; i < eventUrls.length; i++) {
-        // console.log($(eventUrls[i]).text());
-        $
-        .get($(eventUrls[i]).text())
-        .done(event => {
-          const favItem = `
-          <h3 class="subtitle">${event.name}</h3>
-          <p><a href="${event.url}">View on TicketMaster</a></p>
-          <p><a href="/event/${event.id}">View page</a></p>
-          <form action="/favourite/event/${event.id}" method="post">
-            <input type="hidden" name="_method" value="delete">
-            <a id="del${event.id}">Remove</a>
-          </form>
-          <br>`;
-          $(favItem).appendTo('.favEvents');
-          return event;
-        })
-        .done(event => {
-          $(`#del${event.id}`).on('click', function(e) {
-            e.preventDefault();
-            console.log($(e.target).parent());
-            $(e.target).parent().submit();
-          });
-        });
-      }
-    } // end of favourites function
+    }
 
     function friends() {
       $('.friendsSection').on('click', () => {
@@ -267,61 +217,10 @@
     }
 
     changeAccForm();
-    favourites();
+    xfavourites('artist');
+    xfavourites('venue');
+    xfavourites('event');
     friends();
   });
 
 </script>
-
-
-<!-- <script type="text/javascript">
-// was using this before I tried slideToggle, see above
-// function xclickTitleAcc(origin, target) {
-//   $(`.${origin}`).one('click', () => {
-//     createListAcc(target);
-//     $(`.${origin}`).one('click', function() {
-//       $(`.${target}`).find('form').remove();
-//       clickTitleAcc(origin, target);
-//     });
-//   });
-// }
-// <input type="hidden" name="_method" value="PUT">
-// function createListAcc(target) {
-//   let parentString = `<form action="/">
-//
-//     <div class="field">
-//       <p class="control">
-//         <input class="input" type="text" name="username" placeholder="Username" value="<%= user.username %>"></input>
-//       </p>
-//     </div>
-//
-//     <div class="field">
-//       <p class="control">
-//         <input class="input" type="email" name="email" placeholder="Email" value="<%= user.email %>"></input>
-//       </p>
-//     </div>
-//
-//     <div class="field">
-//       <p class="control">
-//         <input class="input" type="password" name="password" placeholder="Old password"></input>
-//       </p>
-//     </div>
-//     <div class="field">
-//       <p class="control">
-//         <input class="input" type="password" name="newPassword" placeholder="New password"></input>
-//       </p>
-//     </div>
-//     <div class="field">
-//       <p class="control">
-//         <input class="input" type="password" name="newPasswordConf" placeholder="Confirm new password"></input>
-//       </p>
-//     </div>
-//     <div class="field is-grouped">
-//       <p class="control">
-//         <button class="button is-primary" style="margin-bottom: 20px">Submit</button>
-//       </p>
-//     </div>
-//   </form>`;
-//   $(parentString).appendTo(`.${target}`);
-// }
-</script> -->
