--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
   <title>WDI Project 2</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.0/css/bulma.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <%# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">%>
 
   <link rel="stylesheet" href="/css/main.css">
 
