--- a/views/statics/home.ejs
+++ b/views/statics/home.ejs
@@ -43,24 +43,20 @@
       <h1 class="title">
         Browse Users
       </h1>
-      <h2 class="subtitle">
-        Click to expand
-      </h2>
+      <a class="button users is-warning usersSectionBtn" style="margin-top: 0; border: 1px solid black">Expand</a>
     </div>
   </div>
 </section>
 <section class="hero usersList hidden">
 </section>
 
-<section class="hero attractions dropSection">
+<section class="hero dropSection">
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
         Top Artists
       </h1>
-      <h2 class="subtitle">
-        Click to expand
-      </h2>
+      <a class="button attractions attractionsBtn dropSectionBtn" style="margin-top: 0">Expand</a>
     </div>
   </div>
 </section>
@@ -68,15 +64,13 @@
 </section>
 <hr>
 
-<section class="hero venues dropSection">
+<section class="hero dropSection">
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
         Top Venues
       </h1>
-      <h2 class="subtitle">
-        Click to expand
-      </h2>
+      <a class="button venues venuesBtn dropSectionBtn" style="margin-top: 0">Expand</a>
     </div>
   </div>
 </section>
@@ -84,15 +78,13 @@
 </section>
 <hr>
 
-<section class="hero events dropSection">
+<section class="hero dropSection">
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
         Top Events
       </h1>
-      <h2 class="subtitle">
-        Click to expand
-      </h2>
+      <a class="button events eventsBtn dropSectionBtn" style="margin-top: 0">Expand</a>
     </div>
   </div>
 </section>
@@ -166,12 +158,15 @@ $(() => {
   } // this is the dry version of this function
 
   function dropSection() {
-    $('.dropSection').on('click', function(e) {
+    $('.dropSectionBtn').on('click', function(e) {
+      $(this).addClass('is-loading');
       const keyString = this.classList[1].substring(0, this.classList[1].length-1);
       if ($(`.${keyString+'s'}Item`).length === 0) {
         getData(`${keyString}`);
         $(`.${keyString+'s'}List`).slideToggle('fast');
-      } else $(`.${keyString+'s'}List`).slideToggle('fast');
+      } else {
+        $(`.${keyString+'s'}List`).slideToggle('fast');
+      $(`.${keyString+'s'}Btn`).removeClass('is-loading');}
     });
   } // shortened click event
 
@@ -200,10 +195,12 @@ $(() => {
     if (keyString === 'artist') keyString = 'attraction'; // yep
     $(parentString).appendTo(`.${keyString+'s'}List`);
     $(`.${keyString+'s'}List`).slideToggle('fast');
+    $(`.${keyString+'s'}Btn`).removeClass('is-loading');
   }
 
   function usersSection() {
-    $('.usersSection').on('click', function() {
+    $('.usersSectionBtn').on('click', function() {
+      $('.usersSectionBtn').addClass('is-loading');
       if ($(`.usersItem`).length === 0) {
         $.get('/show/users')
         .done(users => {
@@ -239,11 +236,13 @@ $(() => {
           console.log(parentString);
           $(parentString).appendTo(`.usersList`);
           $(`.usersList`).slideToggle('fast');
+          $('.usersSectionBtn').removeClass('is-loading');
         })
         .fail(err => {
           console.log('Error getting users: '+err);
         });
       } else $(`.usersList`).slideToggle('fast');
+      $('.usersSectionBtn').removeClass('is-loading');
     });
   }
 
